--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,8 +1,7 @@
 name: scoped_get_it
 description: A new Flutter package project.
 version: 0.0.1
-author: null
-homepage: null
+repository: https://github.com/TarekkMA/scoped_get_it
 
 environment:
   sdk: ">=2.7.0 <3.0.0"
@@ -22,7 +21,6 @@ dev_dependencies:
 # following page: https://dart.dev/tools/pub/pubspec
 # The following section is specific to Flutter.
 flutter: null
-
 # To add assets to your package, add an assets section, like this:
 # assets:
 #   - images/a_dot_burr.jpeg
